# comp_phys

autocorrelation/: CMakeLists.txt  autocorrelation.h  main.cpp
binning_method/: CMakeLists.txt  binning_method.h  bootstrap.h  main.cpp
box_mueller/: CMakeLists.txt  main.cpp
buffon_needle/: CMakeLists.txt  main.cpp
ising_model/: CMakeLists.txt  main.cpp
ising_model/src/: main.cpp
mc_estimates/: CMakeLists.txt  main.cpp
mc_integration/: CMakeLists.txt  main.cpp
rng_sphere/: CMakeLists.txt  main.cpp  random_n_sphere.h
